--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,17 @@
 spring:
   application:
-    name: Document Uploader Backends
+    name: Document Uploader Backend
+  datasource:
+    url: jdbc:mysql://localhost:3306/document_store
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    hibernate:
+     ddl-auto: update
+    show-sql: true
+
+springdoc:
+  swagger-ui:
+    path: /docs
